# osu-tourney-data-reader

./: Cargo.toml  Justfile  README.md  build.rs
assets/: offsets.json
src/: finder.rs  main.rs  memory.rs  server.rs
