[package]
name = "osu-tourney-data-reader"
version = "1.0.1"
edition = "2021"
description = "osu!tourney data reader, to be used with osu-dach"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7", features = ["ws"] }
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
chrono = "0.4"

[build-dependencies]
winresource = "0.1.28"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_UI_WindowsAndMessaging",
]}

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
